-Login oauth y Vista de playlists

--- a/SpotiHigherLowerApp/Views/Home/Index.cshtml
+++ b/SpotiHigherLowerApp/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Login</title>
+</head>
+<body>
+    <div>
+        <h1>Iniciar Sesión con Spotify</h1>
+        <a asp-controller="Auth" asp-action="Login">Login with Spotify</a>
+    </div>
+</body>
+</html>
