--- a/SpotiHigherLowerApp/Views/_ViewImports.cshtml
+++ b/SpotiHigherLowerApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SpotiHigherLowerApp
 @using SpotiHigherLowerApp.Models
+@using SpotiHigherLowerApp.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
